--- a/index.html
+++ b/index.html
@@ -446,9 +446,13 @@
         
         <!-- MODAL -->
         <div class="backdrop is-hidden" data-modal>
-            <div class="modal">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis, impedit ad. Corporis animi quia alias quam provident magnam consectetur reiciendis, aliquid unde incidunt natus repellendus optio tenetur autem repudiandae perspiciatis ad asperiores sequi facilis quo earum? Debitis minima porro iure numquam iusto veritatis laborum dignissimos sunt, eos quo magni voluptatem. Incidunt expedita enim velit vero explicabo nihil voluptates, excepturi nulla vel tempore nobis veniam ad blanditiis. Est sapiente commodi sunt reprehenderit distinctio iusto unde doloremque repellendus voluptates, fugit eum ipsam porro deleniti soluta dicta cum nobis hic incidunt perferendis natus placeat animi rem aperiam quis. Doloremque voluptatem eveniet quos iusto.</p>
-                <button data-modal-close>Закрыть</button>
+            <div class="modal item">
+                <button data-modal-close class="modal-btn">
+                    <svg class="modal-icon">
+                        <use href="./images/icons.svg#icon-close">
+                        </use>
+                    </svg>
+                </button>
             </div>
         </div>
 
