оверлей з текстом на картках сторінки Портфоліо

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,9 +10,9 @@
         <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
+        <!-- HEADER -->
         <header class="header">
-            <!-- HEADER -->
-            <div class="container">
+        <div class="container">
                 <!-- LOGO HEADER -->
                 <div class="logo-header">
                     <a href="./index.html" lang="en" class="logo-common-part">Web<span class="logo-header-part">Studio</span>
@@ -59,8 +59,9 @@
                         </li>
                     </ul>
                 </div>
-         </div> 
+        </div> 
         </header>
+        <!-- MAIN -->
         <main>
             <!-- PORTFOLIO -->
             <section class="section">
@@ -88,7 +89,12 @@
                     <ul class="list portfolio">
                         <li class="item portfolio">
                             <a href="#" class="link portfolio">
-                                <img src="./images/project-1.jpg" alt="фото проекта Технокряк" class="image-portfolio">
+                                <div class="project-portfolio">
+                                    <img src="./images/project-1.jpg" alt="фото проекта Технокряк" class="image-portfolio">
+                                    <div class="project overlay">
+                                        <p class="project-description">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                                    </div>
+                                </div>
                                 <div class="title-portfolio">
                                     <h2 class="section-title portfolio">Технокряк</h2>
                                     <p class="text portfolio">Веб-сайт</p>
@@ -97,7 +103,12 @@
                         </li>
                         <li class="item portfolio">
                             <a href="#" class="link portfolio">
-                                <img src="./images/project-2.jpg" alt="фото проекта Постер New Orlean vs Golden Star" class="image-portfolio">
+                                <div class="project-portfolio">
+                                    <img src="./images/project-2.jpg" alt="фото проекта Постер New Orlean vs Golden Star" class="image-portfolio">
+                                    <div class="project overlay">
+                                        <p class="project-description"></p>
+                                    </div>
+                                </div>
                                 <div class="title-portfolio">
                                     <h2 class="section-title portfolio">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
                                     <p class="text portfolio">Дизайн</p>
@@ -106,7 +117,12 @@
                         </li>
                         <li class="item portfolio">
                             <a href="#" class="link portfolio">
-                                <img src="./images/project-3.jpg" alt="фото проекта Ресторан Seafood" class="image-portfolio">
+                                <div class="project-portfolio">
+                                    <img src="./images/project-3.jpg" alt="фото проекта Ресторан Seafood" class="image-portfolio">
+                                    <div class="project overlay">
+                                        <p class="project-description"></p>
+                                    </div>
+                                </div>
                                 <div class="title-portfolio">
                                     <h2 class="section-title portfolio">Ресторан <span lang="en">Seafood</span></h2>
                                     <p class="text portfolio">Приложение</p>
@@ -115,7 +131,12 @@
                         </li>
                         <li class="item portfolio">
                             <a href="#" class="link portfolio">
-                                <img src="./images/project-4.jpg" alt="фото проекта Prime" class="image-portfolio">
+                                <div class="project-portfolio">
+                                    <img src="./images/project-4.jpg" alt="фото проекта Prime" class="image-portfolio">
+                                    <div class="project overlay">
+                                        <p class="project-description"></p>
+                                    </div>
+                                </div>
                                 <div class="title-portfolio">
                                     <h2 class="section-title portfolio">Проект <span lang="en">Prime</span></h2>
                                     <p class="text portfolio">Маркетинг</p>
@@ -124,7 +145,12 @@
                         </li>
                         <li class="item portfolio">
                             <a href="#" class="link portfolio">
-                                <img src="./images/project-5.jpg" alt="фото проекта Boxes" class="image-portfolio">
+                                <div class="project-portfolio">
+                                    <img src="./images/project-5.jpg" alt="фото проекта Boxes" class="image-portfolio">
+                                    <div class="project overlay">
+                                        <p class="project-description"></p>
+                                    </div>
+                                </div>
                                 <div class="title-portfolio">
                                     <h2 class="section-title portfolio">Проект <span lang="en">Boxes</span></h2>
                                     <p class="text portfolio">Приложение</p>
@@ -134,7 +160,12 @@
                         </li>
                         <li class="item portfolio">
                             <a href="#" class="link portfolio">
-                                <img src="./images/project-6.jpg" alt="фото проекта Inspiration has no Borders" class="image-portfolio">
+                                <div class="project-portfolio">
+                                    <img src="./images/project-6.jpg" alt="фото проекта Inspiration has no Borders" class="image-portfolio">
+                                    <div class="project overlay">
+                                        <p class="project-description"></p>
+                                    </div>
+                                </div>
                                 <div class="title-portfolio">
                                     <h2 lang="en" class="section-title portfolio">Inspiration has no Borders</h2>
                                     <p class="text portfolio">Веб-сайт</p>
@@ -143,7 +174,12 @@
                         </li>
                         <li class="item portfolio">
                             <a href="#" class="link portfolio">
-                                <img src="./images/project-7.jpg" alt="фото проекта Издание Limited Edition" class="image-portfolio">
+                                <div class="project-portfolio">
+                                    <img src="./images/project-7.jpg" alt="фото проекта Издание Limited Edition" class="image-portfolio">
+                                    <div class="project overlay">
+                                        <p class="project-description"></p>
+                                    </div>
+                                </div>
                                 <div class="title-portfolio" >
                                     <h2 class="section-title portfolio">Издание <span lang="en">Limited Edition</span></h2>
                                     <p class="text portfolio">Дизайн</p>
@@ -152,7 +188,12 @@
                         </li>
                         <li class="item portfolio">
                             <a href="#" class="link portfolio">
-                                <img src="./images/project-8.jpg" alt="фото проекта LAB" class="image-portfolio">
+                                <div class="project-portfolio">
+                                    <img src="./images/project-8.jpg" alt="фото проекта LAB" class="image-portfolio">
+                                    <div class="project overlay">
+                                        <p class="project-description"></p>
+                                    </div>
+                                </div>
                                 <div class="title-portfolio">
                                     <h2 class="section-title portfolio">Проект <span lang="en">LAB</span></h2>
                                     <p class="text portfolio">Маркетинг</p>
@@ -161,7 +202,12 @@
                         </li>
                         <li class="item portfolio">
                             <a href="#" class="link portfolio">
-                                <img src="./images/project-9.jpg" alt="фото проекта Growing Business" class="image-portfolio">
+                                <div class="project-portfolio">
+                                    <img src="./images/project-9.jpg" alt="фото проекта Growing Business" class="image-portfolio">
+                                    <div class="project overlay">
+                                        <p class="project-description"></p>
+                                    </div>
+                                </div>
                                 <div class="title-portfolio">
                                     <h2 lang="en" class="section-title portfolio">Growing Business</h2>
                                     <p class="text portfolio">Приложение</p>
@@ -172,6 +218,7 @@
                 </div>
             </section>
         </main>
+        <!-- FOOTER -->
         <footer class="footer">
             <div class="footer-container container">
                 <div class="footer-contacts">
